// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip demo -- placement 1`] = `
.c2.uc-fe-popover {
  position: absolute;
  left: -9999px;
  top: -9999px;
  z-index: 100;
  display: block;
}

.c2.uc-fe-popover-hidden {
  display: none;
}

.c2.uc-fe-popover-animation-fade-enter,
.c2.uc-fe-popover-animation-fade-appear,
.c2.uc-fe-popover-animation-fade-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c2.uc-fe-popover-animation-fade-enter,
.c2.uc-fe-popover-animation-fade-appear {
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

.c2.uc-fe-popover-animation-fade-leave {
  -webkit-animation-name: hSsjZP;
  animation-name: hSsjZP;
}

.c2.uc-fe-popover-animation-bounce-enter,
.c2.uc-fe-popover-animation-bounce-appear,
.c2.uc-fe-popover-animation-bounce-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c2.uc-fe-popover-animation-bounce-enter,
.c2.uc-fe-popover-animation-bounce-appear {
  -webkit-animation-name: gLWDmf;
  animation-name: gLWDmf;
}

.c2.uc-fe-popover-animation-bounce-leave {
  -webkit-animation-name: dSExIX;
  animation-name: dSExIX;
}

.c2.uc-fe-popover-animation-zoom-enter,
.c2.uc-fe-popover-animation-zoom-appear,
.c2.uc-fe-popover-animation-zoom-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c2.uc-fe-popover-animation-zoom-enter,
.c2.uc-fe-popover-animation-zoom-appear {
  -webkit-animation-name: gDGwlq;
  animation-name: gDGwlq;
}

.c2.uc-fe-popover-animation-zoom-leave {
  -webkit-animation-name: xUjnO;
  animation-name: xUjnO;
}

.c2.uc-fe-popover-animation-slide-up-enter,
.c2.uc-fe-popover-animation-slide-up-appear {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  display: block !important;
  opacity: 0;
  -webkit-animation-timing-function: cubic-bezier(0.08,0.82,0.17,1);
  animation-timing-function: cubic-bezier(0.08,0.82,0.17,1);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c2.uc-fe-popover-animation-slide-up-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  display: block !important;
  opacity: 1;
  -webkit-animation-timing-function: cubic-bezier(0.6,0.04,0.98,0.34);
  animation-timing-function: cubic-bezier(0.6,0.04,0.98,0.34);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomLeft,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomLeft,
.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomCenter,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomCenter,
.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomRight,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomRight {
  -webkit-animation-name: kuepuf;
  animation-name: kuepuf;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topLeft,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topLeft,
.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topCenter,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topCenter,
.c2.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topRight,
.c2.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topRight {
  -webkit-animation-name: bAmAeh;
  animation-name: bAmAeh;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomLeft,
.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomCenter,
.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomRight {
  -webkit-animation-name: kbwIVM;
  animation-name: kbwIVM;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topLeft,
.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topCenter,
.c2.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topRight {
  -webkit-animation-name: bRXKvn;
  animation-name: bRXKvn;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c8 {
  padding: 8px 10px;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 3px;
  background-color: #fff;
  border: 1px solid #c3cad9;
  color: #6b798e;
}

.c5 {
  display: inline-block;
  position: absolute;
  width: 0;
  height: 0;
  border-width: 0;
  border-color: transparent;
  border-style: solid;
}

.c7 {
  display: inline-block;
  position: absolute;
  width: 0;
  height: 0;
  border-width: 0;
  border-color: transparent;
  border-style: solid;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c6 {
  margin-left: -6px;
  border-width: 0 6px 6px 6px;
  border-top-color: transparent;
  border-left-color: transparent;
  border-right-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c4 {
  top: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c6 {
  top: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c6 {
  margin-left: -6px;
  border-width: 6px 6px 0 6px;
  border-bottom-color: transparent;
  border-left-color: transparent;
  border-right-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c4 {
  bottom: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c6 {
  bottom: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c6 {
  margin-top: -6px;
  border-width: 6px 0 6px 6px;
  border-top-color: transparent;
  border-bottom-color: transparent;
  border-right-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c4 {
  right: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c6 {
  right: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c6 {
  margin-top: -6px;
  border-width: 6px 6px 6px 0;
  border-top-color: transparent;
  border-bottom-color: transparent;
  border-left-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c4 {
  left: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c6,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c6 {
  left: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c4 {
  left: 15%;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c4 {
  right: 15%;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c4 {
  top: 15%;
  margin-top: 0;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c4 {
  bottom: 15%;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c4 {
  left: 50%;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c4,
.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c4 {
  top: 50%;
}

.c3 .c4 {
  border-color: #c3cad9;
}

.c3 .c6 {
  border-color: #fff;
}

.c1 {
  vertical-align: baseline;
}

.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0:hover {
  color: #3555f6;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-topLeft "
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                topLeft
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-top "
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                top
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-topRight "
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                topRight
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-bottomLeft "
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                bottomLeft
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-bottom "
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                bottom
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-bottomRight "
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                bottomRight
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-leftTop "
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                leftTop
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-left "
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                left
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-leftBottom "
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                leftBottom
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-rightTop "
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                rightTop
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-right "
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                right
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin:40px 80px;display:inline-block;position:relative;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        <i
          class="uc-fe-button-icon uc-fe-icon icon__ai c1"
          type="ai"
        />
        Button
      </button>
      <div>
        <div
          class="uc-fe-popover c2 uc-fe-tooltip-popup  uc-fe-popover-placement-rightBottom "
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5"
            >
              <span
                class="c6 c7"
              />
            </span>
            <div
              class="c8"
            >
              <p>
                rightBottom
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tooltip demo -- theme 1`] = `
.c1.uc-fe-popover {
  position: absolute;
  left: -9999px;
  top: -9999px;
  z-index: 100;
  display: block;
}

.c1.uc-fe-popover-hidden {
  display: none;
}

.c1.uc-fe-popover-animation-fade-enter,
.c1.uc-fe-popover-animation-fade-appear,
.c1.uc-fe-popover-animation-fade-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c1.uc-fe-popover-animation-fade-enter,
.c1.uc-fe-popover-animation-fade-appear {
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

.c1.uc-fe-popover-animation-fade-leave {
  -webkit-animation-name: hSsjZP;
  animation-name: hSsjZP;
}

.c1.uc-fe-popover-animation-bounce-enter,
.c1.uc-fe-popover-animation-bounce-appear,
.c1.uc-fe-popover-animation-bounce-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c1.uc-fe-popover-animation-bounce-enter,
.c1.uc-fe-popover-animation-bounce-appear {
  -webkit-animation-name: gLWDmf;
  animation-name: gLWDmf;
}

.c1.uc-fe-popover-animation-bounce-leave {
  -webkit-animation-name: dSExIX;
  animation-name: dSExIX;
}

.c1.uc-fe-popover-animation-zoom-enter,
.c1.uc-fe-popover-animation-zoom-appear,
.c1.uc-fe-popover-animation-zoom-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.c1.uc-fe-popover-animation-zoom-enter,
.c1.uc-fe-popover-animation-zoom-appear {
  -webkit-animation-name: gDGwlq;
  animation-name: gDGwlq;
}

.c1.uc-fe-popover-animation-zoom-leave {
  -webkit-animation-name: xUjnO;
  animation-name: xUjnO;
}

.c1.uc-fe-popover-animation-slide-up-enter,
.c1.uc-fe-popover-animation-slide-up-appear {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  display: block !important;
  opacity: 0;
  -webkit-animation-timing-function: cubic-bezier(0.08,0.82,0.17,1);
  animation-timing-function: cubic-bezier(0.08,0.82,0.17,1);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c1.uc-fe-popover-animation-slide-up-leave {
  -webkit-animation-duration: 0.1s;
  animation-duration: 0.1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  display: block !important;
  opacity: 1;
  -webkit-animation-timing-function: cubic-bezier(0.6,0.04,0.98,0.34);
  animation-timing-function: cubic-bezier(0.6,0.04,0.98,0.34);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomLeft,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomLeft,
.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomCenter,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomCenter,
.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-bottomRight,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-bottomRight {
  -webkit-animation-name: kuepuf;
  animation-name: kuepuf;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topLeft,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topLeft,
.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topCenter,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topCenter,
.c1.uc-fe-popover-animation-slide-up-enter-active.uc-fe-popover-placement-topRight,
.c1.uc-fe-popover-animation-slide-up-appear-active.uc-fe-popover-placement-topRight {
  -webkit-animation-name: bAmAeh;
  animation-name: bAmAeh;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomLeft,
.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomCenter,
.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-bottomRight {
  -webkit-animation-name: kbwIVM;
  animation-name: kbwIVM;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topLeft,
.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topCenter,
.c1.uc-fe-popover-animation-slide-up-leave-active.uc-fe-popover-placement-topRight {
  -webkit-animation-name: bRXKvn;
  animation-name: bRXKvn;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c7 {
  padding: 8px 10px;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 3px;
  background-color: #fff;
  border: 1px solid #c3cad9;
  color: #6b798e;
}

.c9 {
  padding: 8px 10px;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 3px;
  background-color: #3a4161;
  border: 1px solid #3a4161;
  color: #fff;
}

.c4 {
  display: inline-block;
  position: absolute;
  width: 0;
  height: 0;
  border-width: 0;
  border-color: transparent;
  border-style: solid;
}

.c6 {
  display: inline-block;
  position: absolute;
  width: 0;
  height: 0;
  border-width: 0;
  border-color: transparent;
  border-style: solid;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c5 {
  margin-left: -6px;
  border-width: 0 6px 6px 6px;
  border-top-color: transparent;
  border-left-color: transparent;
  border-right-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c3 {
  top: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c5 {
  top: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c5 {
  margin-left: -6px;
  border-width: 6px 6px 0 6px;
  border-bottom-color: transparent;
  border-left-color: transparent;
  border-right-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c3 {
  bottom: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c5 {
  bottom: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c5 {
  margin-top: -6px;
  border-width: 6px 0 6px 6px;
  border-top-color: transparent;
  border-bottom-color: transparent;
  border-right-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c3 {
  right: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c5 {
  right: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c5 {
  margin-top: -6px;
  border-width: 6px 6px 6px 0;
  border-top-color: transparent;
  border-bottom-color: transparent;
  border-left-color: transparent;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c3 {
  left: -6px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c5,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c5 {
  left: 1px;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomLeft .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topLeft .c3 {
  left: 15%;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-bottomRight .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-topRight .c3 {
  right: 15%;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-leftTop .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightTop .c3 {
  top: 15%;
  margin-top: 0;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-leftBottom .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-rightBottom .c3 {
  bottom: 15%;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-top .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-bottom .c3 {
  left: 50%;
}

.uc-fe-tooltip-popup.uc-fe-popover-placement-left .c3,
.uc-fe-tooltip-popup.uc-fe-popover-placement-right .c3 {
  top: 50%;
}

.c2 .c3 {
  border-color: #c3cad9;
}

.c2 .c5 {
  border-color: #fff;
}

.c8 .c3 {
  border-color: #3a4161;
}

.c8 .c5 {
  border-color: #3a4161;
}

.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0:hover {
  color: #3555f6;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        Hover
      </button>
      <div>
        <div
          class="uc-fe-popover c1 uc-fe-tooltip-popup  uc-fe-popover-placement-topLeft "
        >
          <div
            class="c2"
          >
            <span
              class="c3 c4"
            >
              <span
                class="c5 c6"
              />
            </span>
            <div
              class="c7"
            >
              <p>
                tooltip message
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
        type="button"
      >
        Hover
      </button>
      <div>
        <div
          class="uc-fe-popover c1 uc-fe-tooltip-popup  uc-fe-popover-placement-topLeft "
        >
          <div
            class="c8"
          >
            <span
              class="c3 c4"
            >
              <span
                class="c5 c6"
              />
            </span>
            <div
              class="c9"
            >
              <p>
                tooltip message
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tooltip demo -- tooltip 1`] = `
.c12 {
  vertical-align: baseline;
}

.c14 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c14:hover {
  color: #3555f6;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c9 .c10 {
  color: #3555f6;
}

.c13 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c7 .c16 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c16:last-child {
  margin-right: 0;
}

.c7 .c17+.c17 {
  margin-left: -1px;
}

.c7 .c15 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c15:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c15:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        placement
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            topLeft
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            top
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            topRight
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            bottomLeft
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            bottom
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            bottomRight
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            leftTop
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            left
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            leftBottom
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            rightTop
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            right
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            rightBottom
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        theme
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            light
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            dark
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c14"
      type="button"
    >
      content
    </button>
  </div>
</div>
`;
